# HGUX

./: .gitignore  Makefile  Makefile.am  README  build.sh  configure.ac  configure.in
libHguX/: HGU_XCursors.h  HGU_XError.c  HGU_XGC.3  HGU_XGC.c  HGU_XGetDomain.c  HGU_XGetDomainUtils.c  HGU_XGetPolyDomain.c  HGU_XGetPolydmn.c  HGU_XGetRect.c  HGU_XGetThresholdDomain.c  HGU_XGetVtx.c  HGU_XGetVtxs.c  HGU_XInteract.h  HGU_XInteractUtils.c  HGU_XLut.3  HGU_XLut.c  HGU_XMiscProcs.c  HGU_XUtils.h  HGU_XVisualMatch.c  Makefile  Makefile.am
libHguXm/: HGU_DrawingA.3  HGU_DrawingA.c  HGU_DrawingA.h  HGU_DrawingAP.h  HGU_XmDialogUtils.3  HGU_XmDialogUtils.c  HGU_XmExtFF_FSBUtils.c  HGU_XmFileList.c  HGU_XmFileProcs.3  HGU_XmFileProcs.c  HGU_XmGraph.c  HGU_XmHelpMenu.c  HGU_XmImageView.c  HGU_XmImageViewMappingControls.c  HGU_XmMacroMenu.c  HGU_XmMenuUtils.3  HGU_XmMenuUtils.c  HGU_XmMiscCallbacks.3  HGU_XmMiscCallbacks.c  HGU_XmMiscProcs.3  HGU_XmMiscProcs.c  HGU_XmPB_Radio.3  HGU_XmPB_Radio.c  HGU_XmPB_Row.3  HGU_XmPB_Row.c  HGU_XmSaveRestore.3  HGU_XmSaveRestore.c  HGU_XmSetInt.c  HGU_XmSlider.3  HGU_XmSlider.c  HGU_XmStrings.h  HGU_XmTextLine.3  HGU_XmTextLine.c  HGU_XmToolTips.c  HGU_XmUserPrompt.3  HGU_XmUserPrompt.c  HGU_XmUtils.h  HGU_XmVarArgs.c  Makefile  Makefile.am
libhguGL/: HGUgl.h  HGUglQuat.3  HGUglQuaternion.c  HGUglQuaternion.h  HGUglShape.3  HGUglShape.c  HGUglShape.h  HGUglText.3  HGUglText.c  HGUglText.h  HGUglwCallbacks.h  HGUglwCanvas.3  HGUglwCanvas.c  HGUglwCanvas.h  HGUglwCanvasP.h  HGUglwCanvasTb.3  HGUglwCanvasTb.c  HGUglwCanvasTb.h  HGUglwCanvasTbP.h  Makefile  Makefile.am
libhguGL/Test/: HGUGL-TestAxes.c  HGUGL-TestCube.c  Makefile
